overflow bug fix

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -625,6 +625,7 @@ ul {
     padding: 1rem 0 0 0;
     /*1rem*/
     pointer-events: none;
+    min-height: 100vh;
 }
 
 .gridback {
@@ -944,6 +945,7 @@ ul {
         grid-template-rows: 1.25rem 1fr;
         grid-gap: 3rem;
         padding: 2.5rem 3rem;
+        min-height: auto;
 
     }
     .grid {
